[package]
name = "rust_lib_Bloomee"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.99"
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "fs", "sync", "time"] }
wasm_runtime_layer = "0.6.0"
wasmi_runtime_layer = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
waclay = "0.2.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4.44"
zstd = "0.13.3"
base64 = "0.22"
rand = "0.8"
url = "2.5"
tracing = "0.1"
lofty = "0.22.4"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "webp"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
panic = "abort"     # Remove panic string and unwinding code
strip = true        # Strip symbols from binary

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

